removed Creations Component and updated Header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,11 +36,11 @@
               >Story Book <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item" routerLinkActive="activated">
+          <!-- <li class="nav-item" routerLinkActive="activated">
             <a class="nav-link" routerLink="auth"
               >My Creations <span class="sr-only">(current)</span></a
             >
-          </li>
+          </li> -->
         </ul>
       </div>
       <ul class="nav navbar-nav navbar-right">
