--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,12 +5,9 @@
         <h3>Welcome,</h3>
         <br />
         <br />
-        <p>What do you feel like doing?</p>
+        <p>Feel like drifting away into your own world?</p>
         <div id="read" class="link-div">
-            <a routerLink="/stories">Grab a Story Book</a>
-        </div>
-        <div id="write" class="link-div">
-            <a routerLink="/auth">Write your own Story</a>
+            <a routerLink="/auth">Let's get you into your Free Account.</a>
         </div>
     </div>
 </div>
