--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
             >
           </li>
           <li class="nav-item" routerLinkActive="activated">
-            <a class="nav-link" routerLink="stories"
+            <a class="nav-link" routerLink="auth"
               >Story Book <span class="sr-only">(current)</span></a
             >
           </li>
