--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,10 +7,7 @@
         <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
             <p>Wanna grab a Story Book? Great!</p>
             <div class="form-group">
-                <input type="email" id="email" class="form-control" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" ngModel name="email" required email placeholder="Email" />
-                <p class="email-error" *ngIf="!pattern && authForm.touched">
-                    Please enter a valid e-mail address!
-                </p>
+                <input type="text" id="email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" class="form-control" ngModel name="email" required email placeholder="Email" />
             </div>
             <div class="form-group">
                 <input type="password" placeholder="Password: Minimum 6 characters" id="password" class="form-control" ngModel name="password" required minlength="6" />
