--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,20 +6,7 @@
   </div>
   <nav class="navbar navbar-expand-sm" role="navigation">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <button
-          type="button"
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#menu"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-          (click)="onToggleNavbarCollapsing()"
-        >
-          <span class="navbar-toggler-icon"></span> O
-        </button>
-      </div>
+      <div class="navbar-header"></div>
       <div
         class="collapse navbar-collapse"
         [class.collapse]="navbarCollapsed"
@@ -28,29 +15,28 @@
         <ul class="navbar-nav">
           <li class="nav-item" routerLinkActive="activated">
             <a class="nav-link" routerLink="home"
-              >Home<span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item" routerLinkActive="activated">
-            <a class="nav-link" routerLink="auth"
-              >Story Book <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <!-- <li class="nav-item" routerLinkActive="activated">
+              >Home<span class="sr-only"></span
+            ></a>
+        </li>
+        <li class="nav-item" routerLinkActive="activated" *ngIf="isAuthenticated">
+            <a class="nav-link" routerLink="stories">Story Book <span class="sr-only"></span
+            ></a>
+        </li>
+        <!-- <li class="nav-item" routerLinkActive="activated">
             <a class="nav-link" routerLink="auth"
               >My Creations <span class="sr-only">(current)</span></a
             >
           </li> -->
         </ul>
-      </div>
-      <ul class="nav navbar-nav navbar-right">
+    </div>
+    <ul class="nav navbar-nav navbar-right">
         <li class="nav-item" *ngIf="!isAuthenticated">
-          <a style="cursor: pointer" routerLink="auth">Login | Signup</a>
+            <a style="cursor: pointer" routerLink="auth">Login | Signup</a>
         </li>
         <li class="nav-item" *ngIf="isAuthenticated">
             <a style="cursor: pointer" (click)="onLogout()">Logout</a>
         </li>
-        </ul>
-    </div>
-    </nav>
+    </ul>
+</div>
+</nav>
 </div>
