--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,14 +6,13 @@
   </div>
   <nav class="navbar navbar-expand-sm" role="navigation">
     <div class="container-fluid">
-      <div class="navbar-header"></div>
-      <div
-        class="collapse navbar-collapse"
-        [class.collapse]="navbarCollapsed"
-        id="menu"
-      >
+      <div class="nav navbar-nav navbar-left">
         <ul class="navbar-nav">
-          <li class="nav-item" routerLinkActive="activated">
+          <li
+            class="nav-item"
+            routerLinkActive="activated"
+            *ngIf="isAuthenticated"
+          >
             <a class="nav-link" routerLink="home"
               >Home<span class="sr-only"></span
             ></a>
@@ -22,11 +21,6 @@
             <a class="nav-link" routerLink="stories">Story Book <span class="sr-only"></span
             ></a>
         </li>
-        <!-- <li class="nav-item" routerLinkActive="activated">
-            <a class="nav-link" routerLink="auth"
-              >My Creations <span class="sr-only">(current)</span></a
-            >
-          </li> -->
         </ul>
     </div>
     <ul class="nav navbar-nav navbar-right">
