--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <br />
         <p>Feel like drifting away into your own world?</p>
         <div id="read" class="link-div">
-            <a routerLink="/auth">Let's get you into your Free Account.</a>
+            <a routerLink="/auth">Let's get you into your Account.</a>
         </div>
     </div>
 </div>
