--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,10 @@
             <a class="nav-link" routerLink="stories">Story Book <span class="sr-only"></span
             ></a>
         </li>
+        <li class="nav-item" routerLinkActive="activated" *ngIf="isAuthenticated">
+            <a class="nav-link" routerLink="stories">Math Challenge <span class="sr-only"></span
+            ></a>
+        </li>
         </ul>
     </div>
     <ul class="nav navbar-nav navbar-right">
