--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,7 +10,7 @@
             <a routerLink="/stories">Grab A Story Book</a>
         </div>
         <div id="math" class="link-div">
-            <a routerLink="/stories">Pick A Math Challenge</a>
+            <a routerLink="/math-games">Pick A Math Challenge</a>
         </div>
     </div>
 </div>
