--- a/src/app/games/pyramid/pyramid.component.html
+++ b/src/app/games/pyramid/pyramid.component.html
@@ -1,5 +1,5 @@
 <div id="heading-cont">
-    <h3 id="heading">Build A Pyramid</h3>
+    <h3 id="heading">Build-A-Pyramid</h3>
 </div>
 <div id="main" class="container-fluid">
     <div class="row">
