--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link" routerLink="stories">Story Book <span class="sr-only"></span
             ></a>
         </li>
-        <li class="nav-item" routerLinkActive="activated" *ngIf="!isAuthenticated">
+        <li class="nav-item" routerLinkActive="activated" *ngIf="isAuthenticated">
             <a class="nav-link" routerLink="math-games">Math Challenge <span class="sr-only"></span
             ></a>
         </li>
